--- a/aula10/aula1006.html
+++ b/aula10/aula1006.html
@@ -44,7 +44,7 @@
 
     <footer id="baixo">
 	<h1 class="nome">  Rodapé </h1>
-	<h1 id="dev">  Rafael e Kaynan  </h1>
+	<h1 id="dev">  filipe e Davi  </h1>
     </footer>
   </body>
 </html>
