--- a/aula10/aula1006.html
+++ b/aula10/aula1006.html
@@ -46,7 +46,7 @@
 
     <footer id="pezin">
 	<h1 class="nome">  Rodapé </h1>
-	<h1 id="devj">  Vitor </h1>
+	<h1 id="devj">  filipe e davi </h1>
     </footer>
   </body>
 </html>
